# scaler-cpp

./: CMakeLists.txt  LICENSE  README.md
Qt-scaler/: CMakeLists.txt
Qt-scaler/Qt-scaler/carousel/: carousel.h
Qt-scaler/Qt-scaler/graphics/: white_board.hpp
Qt-scaler/Qt-scaler/widgets/: white_board.h
Qt-scaler/button/: button.hpp
Qt-scaler/main_window/: main_window.cpp  main_window.hpp
Qt-scaler/player/: player.cpp  player.hpp
Qt-scaler/resources/: Qt_scaler.qrc
Qt-scaler/test/carousel/: carousel.cpp
Qt-scaler/test/graphics/: white_board.cpp
Qt-scaler/test/preview/: preview.cpp
Qt-scaler/test/widgets/: white_board.cpp
scaler/: span.h  variant.h
scaler/concepts/: concepts.hpp  iterator_concepts.hpp
scaler/expected/: CMakeLists.txt  expected.h  json_test.cpp  main.cpp  smf_control.h  test_expected.cpp
scaler/iterator/: iterator.hpp
scaler/memory/: pointer_traits.hpp
scaler/ranges/: range_access.hpp  range_algorithm.hpp  range_concepts.hpp  range_primitives.h  range_view.hpp
scaler/type_traits/: type_traits.hpp
scaler/veque/: CMakeLists.txt
scaler/veque/include/: json.cpp  json.hpp  tcmalloc.cpp  tcmalloc.hpp  veque.hpp
scaler/veque/performance/: main.cpp
scaler/veque/test/: test_resize.cpp
seek/: CMakeLists.txt  main.cpp  tab_widget.qrc  test1.cpp
seek/carousel/: carousel.cpp  carousel.h
test/: main.cpp
test/algorithm/: find.cpp  search.cpp
test/iterator/: basic_const_iterator.cpp  begin.cpp  cbegin.cpp  cend.cpp  counted_iterator.cpp  end.cpp
test/iterator_concepts/: bidi_iterator.cpp  contiguous_iterator.cpp  indirect_result.cpp  input_or_output_iterator.cpp  projected.cpp  random_iterator.cpp
test/variant/: variant.cpp
test/views/: filter_view.cpp
